# pdfix_sdk_example_cpp

./: .gitignore  CMakeLists.txt  README.md  build_with_ninja.sh
.cache/clangd/index/: AcroFormExport.h.D2919CBB3E33295E.idx  AcroFormImport.h.2C2C6872EC51AEBD.idx  AddComment.h.35799F0B2F97A9FD.idx  AddTags.h.2B7952775E48F281.idx  AddWatermark.h.54766DDC1EE08360.idx  ApplyRedaction.h.0CD2C8C58F79DFBD.idx  BookmarksToJson.h.E76676E622D58B27.idx  ConvertToHtml.h.6E2BB326FA02E879.idx  ConvertToHtmlEx.h.9A5A9EB29185E6FC.idx  CreateNewDocument.h.138C695B13B13AC5.idx  CreateNewDocuments.h.329A32957BBB5522.idx  CreatePage.h.1E8439260B8AED66.idx  CreateRedactionMark.h.256DB239E2079176.idx  DeletePages.h.7C0D7781EF17E490.idx  DigitalSignature.h.63E7A66F40AA4692.idx  DocumentMetadata.h.587EA26912D3901C.idx  EditPageObjectMCID.h.010DA61590EF8861.idx  EmbedFonts.h.05887194F1A8F635.idx  ExtractData.h.4ED985B58875EBB2.idx  ExtractHighlightedText.h.6E0F5518D6C0BD6F.idx  ExtractImages.h.C2D5673DB1E56B05.idx  ExtractTables.h.D1CF84F25C9F0751.idx  ExtractText.h.5935DDF4A46F5040.idx  FlattenAnnots.h.A206C328053DF93B.idx  ImportFormData.h.BAE76226DED32541.idx  InsertPages.h.DA6E35C31088DB19.idx  LicenseReset.h.2F83CBE89D800879.idx  LicenseStatus.h.138C954802DEB542.idx  MakeAccessible.h.2C689D536E730006.idx  MovePage.h.DC87A26E3CC5728E.idx  NamedDestsToJson.h.D423242D90C32042.idx  OcrWithTesseract.h.4FAB1C94668220DE.idx  OpedDocumentFromStream.h.427DD6E08FB8CA3C.idx  PagesToJson.h.79F1327225541859.idx  ParsePageContent.h.A6C280F13A9021FB.idx  ParsePdsObjects.h.EE4E80C583310FFA.idx  PdfixEngine.h.6CBEC8D0B8445EF8.idx  PreflightDocTemplate.h.C81865FE504DA74A.idx  ProcessControl.h.7E52994DDB12F06F.idx  RemoveComments.h.878D17ED51E3BA21.idx  (+19 more)
example/: CMakeLists.txt  example.cpp
include/: OcrTesseract.h  PdfToHtml.h  Pdfix.h
include/pdfixsdksamples/: AcroFormExport.h  AcroFormImport.h  AddComment.h  AddTags.h  AddWatermark.h  ApplyRedaction.h  BatchCommand.h  BookmarksToJson.h  CertDigitalSignature.h  CommandRemoveEmptyTags.h  ConvertRGBToCMYK.h  ConvertTaggedPdf.h  ConvertToHtml.h  ConvertToHtmlEx.h  ConvertToJson.h  ConvertToTiff.h  ConvertToXml.h  CopyAnnots.h  CreateNewDocument.h  CreateNewDocuments.h  CreatePage.h  CreateRedactionMark.h  DeletePages.h  DigitalSignature.h  DocumentMetadata.h  DocumentSecurity.h  EditContent.h  EditPageObjectMCID.h  EmbedFonts.h  ExportFormFieldValues.h  ExtractData.h  ExtractHighlightedText.h  ExtractImages.h  ExtractTables.h  ExtractText.h  ExtractTextFromOCGLayer.h  FillForm.h  FlattenAnnots.h  GetWhitespace.h  ImportFormData.h  (+47 more)
output/: dummy.txt
platform/msvc2017/: PDFixSDKSample.vcxproj.filters  PdfixSDKSample.sln  PdfixSDKSample.vcxproj
platform/xcode/PDFixSDKSample.xcodeproj/: project.pbxproj
resources/: README.md
src/: AcroFormExport.cpp  AcroFormImport.cpp  AddComment.cpp  AddComment.hpp  AddTags.cpp  AddTags.hpp  AddWatermark.cpp  AddWatermark.hpp  ApplyRedaction.cpp  BatchCommand.cpp  BookmarksToJson.cpp  BookmarksToJson.hpp  CertDigitalSignature.cpp  CertDigitalSignature.hpp  CommandRemoveEmptyTags.cpp  ConvertRGBToCMYK.cpp  ConvertTaggedPdf.cpp  ConvertTaggedPdf.hpp  ConvertToHtml.cpp  ConvertToHtml.hpp  ConvertToHtmlEx.cpp  ConvertToHtmlEx.hpp  ConvertToJson.cpp  ConvertToTiff.cpp  ConvertToXml.cpp  ConvertToXml.hpp  CopyAnnots.cpp  CreateNewDocument.cpp  CreateNewDocuments.cpp  CreatePage.cpp  CreateRedactionMark.cpp  DeletePages.cpp  DigitalSignature.cpp  DigitalSignature.hpp  DocumentMetadata.cpp  DocumentMetadata.hpp  DocumentSecurity.cpp  EditContent.cpp  EditPageObjectMCID.cpp  EmbedFonts.cpp  (+97 more)
