add_executable(example example.cpp)

set_target_properties(example
  PROPERTIES
  CXX_STANDARD 17
  CMAKE_MACOSX_RPATH OFF
  CXX_STANDARD_REQUIRED TRUE
  RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIRECTORY}
  RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIRECTORY}
  )

target_link_libraries(example PRIVATE pdfixsdksample)
